responsive except element/type/region circle and image do not fit correctly (compress) and searchbar need some esthetic changes

--- a/styles/monster.css
+++ b/styles/monster.css
@@ -51,13 +51,15 @@ main {
 .top-container {
     position: relative;
     text-align: center;
-    background-color: white;
-    height: 80vh;
-    width: 100vw;
-    max-height: 60%;
-    max-width: 90%;
     margin-top: 60px;
     margin-bottom: 60px;
+    width: 90%;
+}
+
+#top-img {
+    align-items: center;
+    height: auto;
+    width: 100%;
 }
 
 .over-landscape-title {
@@ -81,6 +83,7 @@ main {
     justify-items: center;
 }
 
+
 /* #sort-container {} */
 
 #main-content {
@@ -102,6 +105,18 @@ main {
     font-size: 2rem;
 }
 
+@media screen and (max-width: 900px) {
+    #collapsible-title {
+        font-size: 1.8rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #collapsible-title {
+        font-size: 1.5rem;
+    }
+}
+
 #collapsible-img-container {
     background-color: black;
     border-radius: 50%;
@@ -116,14 +131,13 @@ main {
     height: 70px;
 }
 
-#monster-img{
+#monster-img {
     max-width: 200px;
     max-height: 200px;
-    background: white; 
-    
+    background: white;
 }
 
-#monster-name{
+#monster-name {
     font-size: larger;
     font-weight: bold;
     color: antiquewhite;
